# Automake Template for xConq's GDL Side Convenience Library
# Copyright (C) 2006	Eric A. McDonald

AM_CXXFLAGS = -I$(srcdir)/../../include

noinst_LTLIBRARIES = libconq_gdl_side.la

libconq_gdl_side_la_SOURCES = sidemask.cc unitview.cc cellview.cc 
libconq_gdl_side_la_SOURCES += doctrine.cc sorder.cc side.cc

