# Automake Template for xConq's GDL Unit Convenience Library
# Copyright (C) 2006	Eric A. McDonald

AM_CXXFLAGS = -I$(srcdir)/../../include

noinst_LTLIBRARIES = libconq_gdl_unit.la

libconq_gdl_unit_la_SOURCES = action.cc task.cc goal.cc plan.cc
libconq_gdl_unit_la_SOURCES += pastunit.cc unitview.cc unit.cc

