# Automake Template for xConq's GDL Library Headers
# Copyright (C) 2006	Eric A. McDonald

AM_CXXFLAGS = -I$(srcdir)/..

SUBDIRS = media unit side gamearea

gdlincldir = $(includedir)/xconq/gdl

gdlincl_HEADERS = base.h lisp.h desc.h dice.h types.h gvars.h tables.h
gdlincl_HEADERS += kernel.h ui.h
gdlincl_HEADERS += dir.h history.h player.h score.h world.h module.h
gdlincl_HEADERS += keyword.def history.def
gdlincl_HEADERS += atype.def mtype.def ttype.def utype.def gvar.def table.def
