# Automake Template for xConq's Low-level Utility Library 
# Copyright (C) 2006	Eric A. McDonald

AM_CXXFLAGS = -I$(srcdir)/..

utilincldir = $(includedir)/xconq/util

utilincl_HEADERS = base.h constants.h memory.h string.h pbooltbl.h
utilincl_HEADERS += parambox.h math.h time.h callbacks.h fs.h
utilincl_HEADERS += signal.h socket.h prng.h log.h ui.h debug.h

