# Automake Template for xConq's GDL Unit Library Headers
# Copyright (C) 2006	Eric A. McDonald

AM_CXXFLAGS = -I$(srcdir)/../..

gdlunitincldir = $(includedir)/xconq/gdl/unit

gdlunitincl_HEADERS = unit_FWD.h action.h task.h goal.h plan.h
gdlunitincl_HEADERS += pastunit.h unitview.h unit.h
gdlunitincl_HEADERS += action.def task.def goal.def plan.def

